--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindcss/vite": "^4.0.4",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.2",
     "framer-motion": "^12.4.2",
     "postcss": "^8.5.1",
     "prop-types": "^15.8.1",
