--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@tailwindcss/vite": "^4.0.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "framer-motion": "^12.4.2",
+    "nodemon": "^3.1.9",
     "postcss": "^8.5.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
