--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "framer-motion": "^12.4.2",
+    "mongodb": "^6.15.0",
+    "multer": "^2.0.1",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.9",
     "postcss": "^8.5.1",
     "prop-types": "^15.8.1",
