--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.5.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.4.0",
