--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@tailwindcss/vite": "^4.0.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.2",
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "framer-motion": "^12.4.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "multer": "^2.0.1",
     "mysql": "^2.18.1",
