--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.6.0",
     "express": "^4.21.2",
     "framer-motion": "^12.4.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "multer": "^2.0.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
     "postcss": "^8.5.1",
     "prop-types": "^15.8.1",
